--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@octokit/rest": "^17.9.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.4",
     "rxjs": "~6.5.4",
